<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--(?<=<string name=")[a-zA-Z_0-9]*?(?=")-->
    <string name="accessibility_cancel_selection">Cancel selection</string>
    <string name="accessibility_toolbar_btn_back">Go back</string>
    <string name="accessibility_toolbar_btn_delete_url">Clear input</string>
    <string name="accessibility_toolbar_multi_select">%1$s selected</string>
    <string name="accessibility_toolbar_screen_position">"%1$s selected.  Options available near top of the screen"</string>
    <string name="app_name">Browser</string>
    <string name="hide_info">Hide Info</string>
    <string name="select_items">Select items</string>
    <string name="show_info">Show Info</string>
    <string name="server_running">The Local Web Server is running.</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="menu_file">File</string>
    <string name="file_manager_search">Search</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="file_manager_empty">No file here</string>
    <string name="file_manager_no_results">No file found</string>
    <string name="show_menu">Show Menu</string>
    <string name="video_server">Video Server</string>
    <string name="error_no_yt_link">Not a valid YouTube link!</string>
    <string name="accessibility_list_menu_button">%1$s Options</string>
    <item name="view_model" type="id" />
    <item name="view_type" type="id" />
    <item name="view_mcp" type="id" />
    <string name="storage">Internal Storage</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="sd_storage">SD Storage</string>
    <string name="youdao">Youdao</string>
    <string name="google">Google</string>
    <string name="managed_by_your_parent">Managed by your parent</string>
    <string name="managed_by_your_parents">Managed by your parents</string>
    <string name="remove">Remove</string>
    <string name="settings">Settings</string>
    <string name="managed_by_your_organization">Managed by your organization</string>
    <string name="managed_settings_cannot_be_reset">Managed settings cannot be reset</string>
    <string name="display_hidden_files">Display Hidden Files.</string>
    <string name="videos_directory">Settings Videos Directory</string>
    <string name="open">Open</string>
    <string name="directory_info">Directory Info</string>
    <string name="cleaning_service">Cleaning Directory</string>
    <string name="more">More</string>
    <string name="extracting">Extracting</string>
    <string name="copy">Copy</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_size">Sort By Size</string>
    <string name="sort_by_data_modified">Sort By Data Modified</string>
    <string name="sort_by_type">Sort By Type</string>
    <string name="sort_by_ascending">Sort By Ascending</string>
    <string name="sort_by_descending">Sort By Descending</string>
    <string name="select_same_type">Select Same Type</string>
    <string name="select_all">Select All</string>
    <string name="file_item_delete">Delete</string>
    <string name="file_item_copy">Copy</string>
    <string name="file_item_paste">Paste</string>
    <string name="file_item_rename">Rename</string>
    <string name="question_dialog_title">Question</string>
    <string name="question_delete_file_item_message">Are you sure delete \"%1$s\"?</string>
    <string name="cut">Cut</string>
    <string name="move_files_progress_dialog_title">Move Files</string>
    <string name="items">%d items</string>
    <string name="file_item_copy_path">Copy Path</string>
    <string name="history">History</string>
    <string name="notification_music_title">Music</string>
    <string name="copy_files_progress_dialog_title">Copy Files</string>
    <string name="question_delete_selections_file_item_message">Are you sure delete \"%s\" files?</string>
    <string name="file_item_extract_zip">Extract</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_pause_video">Pause video</string>
    <string name="accessibility_reload_video">Reload video</string>
    <string name="accessibility_time_bar">Video player time bar</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="share">Share</string>
    <string name="movie_view_label">Video player</string>
    <string name="rename_file_item">Rename File</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="file_item_cut">Cut</string>
    <string name="progress_dialog_extract_zip_title">Extracting Zip</string>
    <string name="progress_dialog_extract_zip_content">Extracting</string>
    <string name="jd">JingDong</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="change_input">Input Method</string>
    <string name="cutVideo">剪切视频</string>
    <string name="recycle">Recycle</string>
    <string name="error_cleartext_not_permitted">Cleartext HTTP traffic not permitted. See https://exoplayer.dev/issues/cleartext-not-permitted</string>

    <string name="error_generic">Playback failed</string>

    <string name="error_drm_unsupported_before_api_18">DRM content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="covertVideo">转化视频</string>
    <string name="covert_all">Covert Videos</string>
</resources>