<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/normal_menu_group">
        <!-- Icon tint of the info menu item is changed programmatically. -->
        <item
            android:id="@+id/search_menu_id"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            android:visible="false"
            app:iconTint="@color/default_icon_color_tint_list"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/history_menu_id"
            android:icon="@drawable/ic_action_history"
            android:title="@string/history"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_id"
            android:icon="@drawable/btn_menu"
            android:title="@string/show_menu"
            android:visible="true"
            app:showAsAction="ifRoom" />

    </group>
    <group
        android:id="@+id/selection_mode_menu_group"
        android:visible="false">

        <item
            android:id="@+id/selection_mode_copy_menu_id"
            android:icon="@drawable/ic_action_content_copy"
            android:title="@string/copy"
            app:iconTint="@color/default_icon_color_inverse"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/selection_mode_cut_menu_id"
            android:icon="@drawable/ic_action_content_cut"
            android:title="@string/cut"
            app:iconTint="@color/default_icon_color_inverse"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/selection_mode_select_same_type_menu_id"
            android:icon="@drawable/ic_action_tab_unselected"
            android:title="@string/select_same_type"
            app:iconTint="@color/default_icon_color_inverse"
            app:showAsAction="never" />
        <item
            android:id="@+id/selection_mode_select_all_menu_id"
            android:icon="@drawable/ic_action_select_all"
            android:title="@string/select_all"
            app:iconTint="@color/default_icon_color_inverse"
            app:showAsAction="never" />
        <item
            android:id="@+id/selection_mode_delete_menu_id"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/remove"
            app:iconTint="@color/default_icon_color_inverse"
            app:showAsAction="never" />
        <item
            android:id="@+id/selection_mode_covert_all_menu_id"
            android:icon="@drawable/ic_action_select_all"
            android:title="@string/covert_all"
            app:iconTint="@color/default_icon_color_inverse"
            app:showAsAction="never" />
    </group>
</menu>